# systray

./: .gitignore  Cargo.toml  LICENSE  README.md  Wurstmineberg.sln  build.rs
Wurstmineberg/: App.config  ContextMenus.cs  Files.cs  ProcessIcon.cs  Program.cs  Util.cs  Wurstmineberg.csproj  packages.config
Wurstmineberg/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
assets/: manifest.xml  release.rs
src/: config.rs  gui.rs  launcher.rs  main.rs  people.rs
