[package]
name = "systray-wurstmineberg-status"
version = "2.6.2"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"
repository = "https://github.com/wurstmineberg/systray"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
directories = "6"
itertools = "0.14"
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", default-features = false, features = ["tray-notification", "high-dpi", "cursor", "message-window", "menu", "notice", "embed-resource"] }
open = "5.0.1"
registry = "1.2.3"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serenity = { version = "0.12.0", default-features = false }
thiserror = "2"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "time"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["serde", "serde_json", "reqwest"] }

[build-dependencies]
winresource = "0.1"
