[package]
name = "systray-wurstmineberg-status"
version = "2.8.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"
repository = "https://github.com/wurstmineberg/systray"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
directories = "6"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["image", "tokio"] }
image = { version = "0.24", default-features = false, features = ["ico"] } # transitive dependency of iced, will be updated in the next release after 0.13.1 (https://github.com/iced-rs/iced/pull/2716)
itertools = "0.14"
log-lock = { git = "https://github.com/fenhl/log-lock", branch = "main" }
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", default-features = false, features = ["tray-notification", "high-dpi", "cursor", "message-window", "menu", "notice", "embed-resource"] }
open = "5.0.1"
registry = "1.2.3"
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "http2", "rustls", "system-proxy"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serenity = { version = "0.12.0", default-features = false }
smart-default = "0.7.1"
thiserror = "2"
tokio = { version = "1.35.1", features = ["process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = { version = "1.19.0", features = ["serde"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["gui", "serde_json", "reqwest"] }

[build-dependencies]
winresource = "0.1"
